  - Added option "-no_nd" (no negative dates), not to interpret years preceded
    by a minus sign as negative dates.

* Gedcom from and to GeneWeb (ged2gwb, gwb2ged)
  - The <em>GeneWeb</em> fields "public name", "surname alias" and
    "photo" are now loaded from and saved to Gedcom resp. as: "2 GIVN",
    "2 SURN" and "1 OBJE (newline) 2 FILE".

* GeneWeb daemon/CGI (gwd)
  - Added error message in relationship computing when loop in
    database (someone being his/her own ancestor).
  - In "search", added ability to write "I" instead of "Ier" (french form).
    Ex: "Charles I" or "Charles Ier" are both accepted.
  - Added ability to add ";opt=no_index" at end of requests to get an
    equivalent link independant from the persons' index number (useful
    to put direct links in Web pages).
  - Added text "Parents of" in top of pages of missing ancestors.
  - Fixed still several bugs (accents) due to new ANSEL encoding.

* Base configuration files (xxx.cnf)
  - Added variable "wizard_just_friend" to suspend the powers of
    "wizards" (e.g. for maintenance): when set to "yes", they become
    simple "friends" (default: "no").
  - Variable "renamed" can be used to specify that a database has been
    renamed. Generates a page giving the good URL to use.

* GeneWeb compiler and Consanguinity computing (gwc, consang)
  - Fixed accents displaying in traces and error messages.

* Documentation (directory doc)
  - Added 2 cases in FAQ.
  - Many small changes.

GeneWeb Version 1.08
--------------------

* Added portuguese among languages (thanks to Yves Guignard).

* gwd:
  - fixed several displaying bugs due to ANSEL
  - in forms, when a precision (about, maybe, before, after, or year) is given
    for a date, the day and month part are ignored, since its works only for
    years (for the moment).
  - photos and background in directory "images" can be installed in a
    subdirectory having the name of the database; ex: "images/martin" for
    the database "martin".