@@ -22,6 +22,8 @@ GeneWeb Version 1.09
     "2 SURN" and "1 OBJE (newline) 2 FILE".
 
 * GeneWeb daemon/CGI (gwd)
+  - Restructuration of displaying of surnames and first names by alphabetic
+    order and frequency. Supposed to fix bugs of alphabetic order (accents).
   - Added error message in relationship computing when loop in
     database (someone being his/her own ancestor).
   - In "search", added ability to write "I" instead of "Ier" (french form).
